Un pequeñisimo cambio

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </article>
             <article>
                 <h2 id="foto">Una foto mía</h2>          
-                <img src="/imagenes/yoConSombrero.jpeg" alt="Yo con un sombrero.jpg" width="400">
+                <img src="imagenes/yoConSombrero.jpeg" alt="Yo con un sombrero.jpg" width="400">
                 <p>Para esta imagen use una etiqueta img que me permitió ponerla aquí y con CSS pude cambiar su posición. De la misma manera me entere que elementos como las imagenes, videos y audio son elemntos embebidos, estos se usan para darle más estética a una página además de que sirven como ayuda en la descripción de otros elementos, por ejemplo, sirven de guía al seguir los pasos de una receta de cocina. Obtuve esta Información de <a href="https://youtu.be/1wQIu0Jar5M?si=h94zEzk9g5_QS60U" target="_blank">este video</a> donde me explicó muy bien que son los elementos embebidos.</p>
             </article>
             <article>
